--- a/build.xml
+++ b/build.xml
@@ -2,10 +2,6 @@
 
 <project name="Boilerplate" default="help">
 
-  <fileset id="attack-tests" dir="tests/attack">
-    <include name="*Test.php"/>
-  </fileset>
-
   <target name="help" description="lists available targets">
     <exec executable="phing" outputProperty="help">
       <arg value="-l"/>
@@ -30,25 +26,15 @@
     </exec>
   </target>
 
-  <target name="unit-tests" description="runs all unit tests">
+  <target name="test" description="runs all unit tests">
     <exec executable="phpunit" passthru="true" checkreturn="true">
       <arg value="--bootstrap"/>
-      <arg file="tests/unit/bootstrap.php"/>
-      <arg file="tests/unit"/>
+      <arg file="tests/bootstrap.php"/>
+      <arg file="tests"/>
     </exec>
   </target>
 
-  <target name="attack-tests" description="runs all attack tests">
-    <fail unless="env.CMSIMPLEDIR" message="CMSIMPLEDIR undefined!"/>
-    <phpunit haltonerror="true" haltonfailure="true">
-      <formatter type="plain" usefile="false"/>
-      <batchtest>
-        <fileset refid="attack-tests"/>
-      </batchtest>
-    </phpunit>
-  </target>
-
-  <target name="check" description="runs all checks" depends="sniff,stan,unit-tests"/>
+  <target name="check" description="runs all checks" depends="sniff,stan,test"/>
 
   <target name="coverage" description="generates coverage report">
     <exec executable="phpunit" passthru="true" checkreturn="true">
